infrastructure/ibmcloud-galasadev-cluster/galasa-pipelines/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: triggers-ingress
  namespace: galasa-pipelines
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
  - hosts:
    - triggers.galasa.dev
    secretName: galasa-wildcard-cert
  rules:
  - host: triggers.galasa.dev
    http:
      paths:
      - backend:
          service:
            name: el-guthub-pr-builder-listener
            port:
              number: 8080
        path: /pr
        pathType: Prefix
  - host: triggers.galasa.dev
    http:
      paths:
      - backend:
          service:
            name: el-guthub-pr-review-builder-listener
            port:
              number: 8080
        path: /pr-review
        pathType: Prefix
